// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for state: error, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: error, labelSize: medium and hasLabel: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: medium and hasLabel: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
legend {
  all: unset;
  margin-bottom: var(--p-spacing-static-md);
  color: var(--p-color-primary);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: medium and hasLabel: true 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
legend {
  all: unset;
  margin-bottom: var(--p-spacing-static-md);
  color: var(--p-color-primary);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: small and hasLabel: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: small and hasLabel: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
legend {
  all: unset;
  margin-bottom: var(--p-spacing-static-md);
  color: var(--p-color-primary);
  font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: none, labelSize: small and hasLabel: true 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
legend {
  all: unset;
  margin-bottom: var(--p-spacing-static-md);
  color: var(--p-color-primary);
  font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: success, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for state: success, labelSize: medium and hasLabel: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
fieldset {
  all: unset;
  display: block;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  margin-top: var(--p-spacing-static-md);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;
